...
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_marginRight="6dip"
        android:src="@mipmap/ic_pour"/>
    <TextView
        android:id="@+id/in_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/result_icon"
        android:layout_alignParentRight="true"
        android:layout_alignWithParentIfMissing="true"
        android:gravity="center_vertical"
...
