...

        <ImageButton
            android:id="@id/exo_next"
            style="@style/ExoMediaButton.Next" />

        <ImageButton
            android:id="@+id/exo_fullscreen_button"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="71dp"
            android:layout_height="52dp"
            android:src="@drawable/ic_action_fullscreen" />


...
